# rust-static-analyzer

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
docs/: Presentacion.pptx  bibliografia.bib  capitulo-1.tex  capitulo-2.tex  capitulo-3.tex  capitulo-4.tex  capitulo-5.tex  mir-syntax.tex  rust-syntax.tex  tesis-dot2tex-fig1.dot  tesis-dot2tex-fig1.tex  tesis.tex
docs/images/: Logo Exactas.png:Zone.Identifier  Logo UNRC.png:Zone.Identifier
examples/: example1.mir  example1.rs  example_ub.rs  hello_world.rs
examples/base_examples/: basic_borrows.rs  cast  cast.rs  demo0.rs  example1.rs  example_defined.rs  if-test.rs  inter_example.rs  inter_example_u32.rs  multiple_args.rs  points-to_example.rs  raw_pointer.rs  shared_ro.rs  simple_example.rs  simple_reborrow.rs  simple_sum.rs
examples/mir_files/: hello_world.mir  simple_sum.mir
examples/tests/: division-by-cero.rs  pointers.rs
src/: analyzer.rs  lib.rs  mir_visitor.rs  points_to.rs  stacked_borrows.rs  utils.rs
src/mir_visitor/: block_visitor.rs  body_visitor.rs  helper.rs  terminator_visitor.rs
