[package]
name = "static_alias_analyzer"
default-run = "rsaa"
version = "0.1.0"
edition = "2018"
exclude = ["examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = false
doctest = false

[[bin]]
name = "rsaa"
test = false
doctest = false

[[bin]]
name = "cargo-rsaa"
test = false
doctest = false

[dependencies]
log = "0.4"
cargo_metadata = "0.14.2"
serde_json = "1.0.61"
